# cleanArch_fastapi_poetry

./: .coverage  .gitignore  database.db  my_ip.py  pyproject.toml
fastapi_zero/: app.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 57cbf0d53837_creating_users_table.py  9fc44d188a8a_create_users_table.py
tests/: test_app.py  test_db.py
