[tool.poetry]
name = "fastapi-zero"
version = "0.1.0"
description = ""
authors = ["thpiotto <thplira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = {extras = ["standard"], version = "^0.115.11"}
pydantic = {extras = ["email"], version = "^2.10.6"}
sqlalchemy = "^2.0.39"
pydantic-settings = "^2.8.1"
alembic = "^1.15.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.ruff]
line-length = 100
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'fastapi dev fastapi_zero/app.py --port 9595'
run_public = 'fastapi dev fastapi_zero/app.py --host 0.0.0.0 --port 9595'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fastapi_zero -vv'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
